--- a/custom_components/raccolta_rifiuti/manifest.json
+++ b/custom_components/raccolta_rifiuti/manifest.json
@@ -6,5 +6,6 @@
   "codeowners": ["@DomoticaFacile"],
   "iot_class": "local_polling",
   "integration_type": "integration",
+  "issue_tracker": "https://github.com/DomoticaFacile/raccolta_rifiuti/issues",
   "documentation": "https://github.com/DomoticaFacile/raccolta_rifiuti"
 }
