--- a/custom_components/raccolta_rifiuti/manifest.json
+++ b/custom_components/raccolta_rifiuti/manifest.json
@@ -1,11 +1,11 @@
 {
   "domain": "raccolta_rifiuti",
   "name": "Raccolta Rifiuti",
-  "version": "1.0.0",
-  "requirements": [],
   "codeowners": ["@DomoticaFacile"],
-  "iot_class": "local_polling",
+  "documentation": "https://github.com/DomoticaFacile/raccolta_rifiuti",
   "integration_type": "entity",
+  "iot_class": "local_polling",
   "issue_tracker": "https://github.com/DomoticaFacile/raccolta_rifiuti/issues",
-  "documentation": "https://github.com/DomoticaFacile/raccolta_rifiuti"
+  "requirements": [],
+  "version": "1.0.1"
 }
