--- a/custom_components/raccolta_rifiuti/manifest.json
+++ b/custom_components/raccolta_rifiuti/manifest.json
@@ -1,11 +1,12 @@
 {
   "domain": "raccolta_rifiuti",
   "name": "Raccolta Rifiuti",
-  "codeowners": ["@DomoticaFacile"],
-  "documentation": "https://github.com/DomoticaFacile/raccolta_rifiuti",
-  "integration_type": "entity",
-  "iot_class": "local_polling",
-  "issue_tracker": "https://github.com/DomoticaFacile/raccolta_rifiuti/issues",
+  "version": "1.0.3",
   "requirements": [],
-  "version": "1.0.2"
+  "codeowners": ["@DomoticaFacile"],
+  "iot_class": "local_polling",
+  "integration_type": "platform",
+  "platforms": ["sensor"],
+  "issue_tracker": "https://github.com/DomoticaFacile/raccolta_rifiuti/issues",
+  "documentation": "https://github.com/DomoticaFacile/raccolta_rifiuti"
 }
