--- a/custom_components/raccolta_rifiuti/manifest.json
+++ b/custom_components/raccolta_rifiuti/manifest.json
@@ -6,5 +6,5 @@
   "requirements": [],
   "codeowners": ["@DomoticaFacile"],
   "iot_class": "local_polling",
-  "issue_tracker": "https://github.com/DomoticaFacile/raccolta_rifiuti/issues",
+  "issue_tracker": "https://github.com/DomoticaFacile/raccolta_rifiuti/issues"
 }
