--- a/custom_components/raccolta_rifiuti/manifest.json
+++ b/custom_components/raccolta_rifiuti/manifest.json
@@ -1,11 +1,11 @@
 {
   "domain": "raccolta_rifiuti",
   "name": "Raccolta Rifiuti",
-  "platforms": ["sensor"],
   "codeowners": ["@DomoticaFacile"],
   "documentation": "https://github.com/DomoticaFacile/raccolta_rifiuti",
+  "integration_type": "sensor",
   "iot_class": "local_polling",
   "issue_tracker": "https://github.com/DomoticaFacile/raccolta_rifiuti/issues",
   "requirements": [],
-  "version": "1.0.3"
+  "version": "1.0.2"
 }
