--- a/blueprints/automation/raccolta_rifiuti/annuncio_raccolta_rifiuti_google.yaml
+++ b/blueprints/automation/raccolta_rifiuti/annuncio_raccolta_rifiuti_google.yaml
@@ -54,20 +54,22 @@ blueprint:
           mode: slider
     abilita_controllo_presenza:
       name: Controllo presenza
-      description: Esegui solo se almeno uno dei due telefoni è in casa
+      description: Esegui solo se almeno uno dei due telefoni è in casa (se abilitato)
       default: false
       selector:
         boolean: {}
     dispositivo_presenza_1:
-      name: Primo telefono da controllare (device_tracker)
+      name: Primo telefono da controllare (facoltativo)
       selector:
         entity:
           domain: device_tracker
+      default: ""
     dispositivo_presenza_2:
-      name: Secondo telefono da controllare (device_tracker)
+      name: Secondo telefono da controllare (facoltativo)
       selector:
         entity:
           domain: device_tracker
+      default: ""
 
 trigger:
   - platform: time
@@ -102,7 +104,10 @@ condition:
         value_template: "{{ not controllo_presenza_attivo }}"
       - condition: template
         value_template: >
-          {{ is_state(tracker_1, 'home') or is_state(tracker_2, 'home') }}
+          {{
+            (tracker_1 in states and is_state(tracker_1, 'home')) or
+            (tracker_2 in states and is_state(tracker_2, 'home'))
+          }}
 
 action:
   - variables:
