--- a/blueprints/automation/raccolta_rifiuti/annuncio_raccolta_rifiuti_google.yaml
+++ b/blueprints/automation/raccolta_rifiuti/annuncio_raccolta_rifiuti_google.yaml
@@ -1,5 +1,4 @@
 # Blueprint realizzato da domoticafacile.it per l'integrazione Raccolta Rifiuti.
-# Blueprint realizzato da domoticafacile.it per l'integrazione Raccolta Rifiuti.
 blueprint:
   name: Annuncio raccolta rifiuti con Google Home
   description: >
@@ -50,27 +49,11 @@ blueprint:
           step: 0.05
           mode: slider
       default: 0.3
-    abilita_controllo_presenza:
-      name: Controllo presenza
-      selector:
-        boolean: {}
-      default: false
-    dispositivo_presenza_1:
-      name: Primo telefono (facoltativo)
-      selector:
-        entity:
-          domain: device_tracker
-      default: ""
-    dispositivo_presenza_2:
-      name: Secondo telefono (facoltativo)
-      selector:
-        entity:
-          domain: device_tracker
-      default: ""
 
 trigger:
   - platform: time
     at: !input orario_annuncio_1
+    id: primo_annuncio
   - platform: time
     at: !input orario_annuncio_2
     id: secondo_annuncio
@@ -78,9 +61,6 @@ trigger:
 variables:
   sensore: !input sensore_raccolta
   secondario_attivo: !input abilita_secondo_orario
-  controllo_presenza_attivo: !input abilita_controllo_presenza
-  tracker_1: !input dispositivo_presenza_1
-  tracker_2: !input dispositivo_presenza_2
 
 condition:
   - condition: template
@@ -89,33 +69,39 @@ condition:
   - condition: or
     conditions:
       - condition: template
-        value_template: "{{ trigger.id != 'secondo_annuncio' }}"
-      - condition: template
-        value_template: "{{ trigger.id == 'secondo_annuncio' and secondario_attivo }}"
-  - condition: or
-    conditions:
-      - condition: template
-        value_template: "{{ not controllo_presenza_attivo }}"
-      - condition: template
-        value_template: >
-          {{
-            (tracker_1 in states and is_state(tracker_1, 'home')) or
-            (tracker_2 in states and is_state(tracker_2, 'home'))
-          }}
+        value_template: "{{ trigger.id == 'primo_annuncio' }}"
+      - condition: and
+        conditions:
+          - condition: template
+            value_template: "{{ trigger.id == 'secondo_annuncio' }}"
+          - condition: template
+            value_template: "{{ secondario_attivo }}"
 
 action:
   - variables:
       raccolta: "{{ state_attr(sensore, 'collection_types') or [] }}"
-      tipi: "{{ raccolta | join(', ') if raccolta else 'nessun tipo di rifiuto definito' }}"
+      tipi: >
+        {% if raccolta | length > 1 %}
+          {{ raccolta[:-1] | join(', ') }} e {{ raccolta[-1] }}
+        {% elif raccolta | length == 1 %}
+          {{ raccolta[0] }}
+        {% else %}
+          nessun tipo di rifiuto definito
+        {% endif %}
+      messaggio: "Domani verrà raccolto: {{ tipi }}."
+
   - service: media_player.volume_set
     data:
       entity_id: !input dispositivo_google
       volume_level: !input volume_pre_annuncio
+
   - service: tts.google_translate_say
     data:
       entity_id: !input dispositivo_google
-      message: "Domani verrà raccolto: {{ tipi }}."
+      message: "{{ messaggio }}"
+
   - delay: 5
+
   - service: media_player.volume_set
     data:
       entity_id: !input dispositivo_google
